# rust-freedom-api

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  cliff.toml  shell.nix
.github/: dependabot.yml
.github/workflows/: check.yml  rust.yml  test.yml
examples/: delete_task_request.rs  fetch_account_from_band.rs  fetch_accounts.rs  fetch_configuration_from_site.rs  fetch_satellite_configurations.rs  fetch_site_from_request.rs  fetch_site_from_site_config.rs  fetch_token.rs  post_band_details.rs
resources/: accounts.json  satellite_bands_find_all.json  satellite_bands_find_one_1573.json  satellite_configurations_find_all.json  satellite_configurations_find_one_810.json  satellite_find_all.json  satellite_find_one_710.json  sites_find_all.json  sites_find_one_14.json
resources/tasks_1/: page_1.json  page_2.json
src/: api.rs  caching_client.rs  client.rs  error.rs  gateway_licenses.rs  lib.rs  mock_client.rs  utils.rs
src/api/: bundle.rs  post.rs
src/api/post/: band.rs  overrides.rs  request.rs  sat_config.rs  satellite.rs  user.rs
src/extensions/: account.rs  band.rs  mod.rs  request.rs  satellite.rs  site.rs  task.rs  user.rs
tests/: accounts.rs  common.rs  satellite_bands.rs  satellite_configurations.rs  satellites.rs  sites.rs
